--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             </div>
            
             <div class="nav-button">
-                <button class="btn white-btn" id="loginBtn" onclick="login()">Sign In</button>
-                <button class="btn" id="registerBtn" onclick="register()">Sign Up</button>
+                <button class="btn white-btn" id="loginBtn" onclick="login()">Iniciatr sesión</button>
+                <button class="btn" id="registerBtn" onclick="register()">Crear usuario</button>
             </div>
             <div class="nav-menu-btn">
                 <i class="bx bx-menu" onclick="myMenuFunction()"></i>
@@ -77,7 +77,7 @@
                     <i class="bx bx-lock-alt"></i>
                 </div>
                 <div class="input-box">
-                    <input type="submit" class="submit" value="Registrarse">
+                    <input type="submit" class="submit" value="Crear cuenta">
                 </div>
                 <div class="two-col">
                     <div class="one">
