se agrega la imagen

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     <div class="wrapper">
+        
         <nav class="nav">
-            <div class="nav-logo">
-                <p>LOGO .</p>
-            </div>
+            <img src="img/El_Cafecito-removebg-preview.png" alt="" class="log">
            
             <div class="nav-button">
                 <button class="btn white-btn" id="loginBtn" onclick="login()">Iniciatr sesión</button>
